--- a/package.json
+++ b/package.json
@@ -1,26 +1,19 @@
 {
   "name": "everybody-codes-2024",
-  "author": "Miquel Burns <miquelfire@gmail.com> (https://miquelfire.red/)",
-  "license": "MIT",
-  "description": "",
-  "private": true,
+  "version": "1.0.0",
+  "main": "index.js",
   "type": "module",
-  "exports": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "sideEffects": false,
+  "private": true,
   "scripts": {
-    "dev": "node --no-warnings --enable-source-maps --loader ts-node/esm src/index.ts",
+    "start": "node index.js",
     "lint": "eslint .",
     "lintfix": "eslint . --fix"
   },
+  "author": "Miquel \"Fire\" Burns <miquelfire@gmail.com> (https://miquelfire.red/)",
+  "license": "MIT",
   "devDependencies": {
     "@eslint/js": "^9.14.0",
-    "@sindresorhus/tsconfig": "^6.0.0",
-    "@types/eslint__js": "^8.42.3",
     "eslint": "^9.14.0",
-    "nodemon": "^3.1.7",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.13.0"
+    "globals": "^15.12.0"
   }
 }
